Add GPIO up / down custom text support

--- a/plugins/gpio/views/item.jade
+++ b/plugins/gpio/views/item.jade
@@ -13,10 +13,10 @@ each item in items
       div
         span.label.label-success.label-large.gpiostatus(data-id="#{item._id}", data-value="1", class=(item.value == '0' ? 'hide' : ''))
           i.icon-circle
-          | Up
+          | #{item.up || 'Up'}
         span.label.label-important.label-large.gpiostatus(data-id="#{item._id}", data-value="0", class=(item.value == '1' ? 'hide' : ''))
           i.icon-circle-blank
-          | Down
+          | #{item.down || 'Down'}
     - else
       div.btn-group(data-toggle="buttons-radio")
         button.btn.btn-large.socket(type="button", data-socket="gpio-toggle", data-id="#{item._id}", data-value="1", class=(item.value == '1' ? 'active' : ''))
